# Gen-Ai-Project

./: .env.example  .gitignore  .vercelignore  GETTING_STARTED.md  README.md  SPEC.md  pyproject.toml  requirements.txt  vercel.json
.agent/skills/: README.md
backend/app/: .gitkeep  __init__.py  main.py
backend/app/db/: __init__.py  storage.py
backend/app/routers/: __init__.py  chat.py  datasets.py  health.py  summary.py  upload.py
backend/app/services/: __init__.py  chat_tools.py  cleaning.py  profiling.py  summary.py
backend/tests/: .gitkeep  test_chat.py  test_cleaning.py  test_persistence.py  test_profiling.py  test_summary.py  test_upload.py
docs/: report.md
docs/adrs/: 000-template.md  001-llm-provider.md  002-chart-library.md  003-sqlite-persistence.md
frontend/: chatpanel-test.txt  dashboard-test-error.txt  executive-test.txt  package-lock.json  package.json  test-output.txt  test-results.txt  test_output.txt  tsconfig.json  uploadform-test.txt  vite.config.ts
frontend/src/: .gitkeep  App.tsx  api.ts
frontend/src/components/: ChatPanel.tsx  CompactUploadBar.tsx  CompanyIntelligence.tsx  Dashboard.tsx  ExecutiveSummary.tsx  GlobalFilters.tsx  ProfileSummary.tsx  UploadForm.tsx
frontend/src/utils/: columnLabels.ts  datasetIntelligence.ts
frontend/tests/: .gitkeep  ChatPanel.test.tsx  CompanyIntelligence.test.tsx  Dashboard.test.tsx  ExecutiveSummary.test.tsx  GlobalFilters.test.tsx  ProfileSummary.test.tsx  UploadForm.test.tsx  UploadFormWithFilters.test.tsx  columnLabels.test.ts  datasetIntelligence.test.ts
tasks/: plan.md  todo.md
